@@ -120,20 +120,36 @@ my %FILTERS = (
 			"Mask"  => "-2.32", # ditto
 		       },
 	       UIST => {
-			"K-target"  => 1.64,
+#			"K-target"  => 1.64, # old
+			"Hartmann"  => 1.64,
 			"J98"       => 1.25,
 			"H98"       => 1.64,
-			"1.66"      => 1.664,
-			"1.644Fe"   => 1.644,
+                        "1.57"      => 1.573,
+			"1.66"      => 1.664, # old
+			"1.58CH4_s" => 1.604,
+			"1.69CH4_l" => 1.674,
+			"1.644Fe"   => 1.643, #
 			"K98"       => 2.20,
-			"2.122S(1)" => 2.122,
+#			"Kshort"    => 2.20,
+#			"Klong"     => 2.20,
+			"2.122S(1)" => 2.121, #
+			"2.122MK"   => 2.127,
+			"2.248S(1)" => 2.248,
+			"2.248MK"   => 2.263,
 			"BrG"       => 2.166,
-			"2.27"      => 2.270,
-			"2.32CO"    => 2.324,
-			"Dust"      => 3.295,
+			"2.27"      => 2.274,
+			"2.32CO"    => 2.324, # old
+			"2.42CO"    => 2.425,
+			"3.05ice"   => 3.048,
+			"Dust"      => 3.278,
+			"3.30PAH"   => 3.286,
+			"3.4nbL"    => 3.415,
+			"3.5mbL"    => 3.489,
+			"3.6nbLp"   => 3.593,
+			"3.99"      => 3.990,
+			"BrA"       => 4.053,
 			"Lp98"      => 3.77,
-			"M98"       => 4.70,
-
+			"Mp98"      => 4.69,
 		       },
 	       MICHELLE => {
 			    "F105B53" => 10.5,
